Fix carousel items button visibility

--- a/src/components/BasketView.js/BasketView.scss
+++ b/src/components/BasketView.js/BasketView.scss
@@ -341,7 +341,9 @@ form.discount {
 
 .basket__carousel {
   width: 100%;
+  height: 550px;
   //background-color: aqua;
   overflow: hidden;
   padding: 0;
+  margin-top: 14em;
 }
