--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -4,6 +4,8 @@
   position: relative;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .carousel__header {
   display: flex;
@@ -17,11 +19,14 @@
   color: #363636;
 }
 .carousel-container {
+  height: 100%;
   margin: 10px 0;
   overflow: hidden;
   position: relative;
+  //background-color: red;
 
   .inner {
+    height: 100%;
     display: grid;
     transition: 0.6s;
     margin: 0;
@@ -32,13 +37,12 @@
     display: grid;
     gap: 10px;
     grid-auto-flow: column;
-
     margin: 0;
 
-    img {
-      width: 100%;
-      object-fit: cover;
-    }
+    // img {
+    //   width: 100%;
+    //   object-fit: cover;
+    // }
   }
 }
 .buttons__wrap {
