--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -3,13 +3,15 @@
 }
 
 .cat-image-wrapper {
-  display: flex;
+  //display: flex;
 }
 
-.cat-image img {
-  width: 100%;
-  margin: 0;
-  object-fit: cover;
+.cat-image {
+  img {
+    width: 100%;
+    margin: 0;
+    object-fit: cover;
+  }
 }
 
 .cat-content {
@@ -66,6 +68,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      padding: 0.55em 1.2em;
       padding-left: 22px;
 
       svg {
