--- a/src/pages/ProductDetail/ProductDetail.scss
+++ b/src/pages/ProductDetail/ProductDetail.scss
@@ -109,3 +109,7 @@
 .section-details {
   max-width: 100%;
 }
+
+.section-like {
+  height: 550px;
+}
